<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mascix</groupId>
    <artifactId>swaggerific</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>swaggerific</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.9.2</junit.version>
        <mainClass>com.mascix.swaggerific/com.mascix.swaggerific.SwaggerApplication</mainClass>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjrt</artifactId>
            <version>1.9.19</version>
        </dependency>

        <!--
        Caused by: java.lang.RuntimeException: No toolkit found
        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>0.11.0</version>
        </dependency>-->

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.swagger.codegen.v3</groupId>
            <artifactId>swagger-codegen-maven-plugin</artifactId>
            <version>3.0.41</version>
        </dependency>
        <dependency>
            <groupId>io.swagger.core.v3</groupId>
            <artifactId>swagger-core</artifactId>
            <version>2.2.9</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.14.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>19.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>19.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>19.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.2</version>
        </dependency>
        <dependency>
            <groupId>com.dlsc.formsfx</groupId>
            <artifactId>formsfx-core</artifactId>
            <version>11.6.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>net.synedra</groupId>
            <artifactId>validatorfx</artifactId>
            <version>0.4.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.bootstrapfx</groupId>
            <artifactId>bootstrapfx-core</artifactId>
            <version>0.4.0</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.26</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>${mainClass}</mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>1.0.18</version>
                <configuration>
                    <reflectionList>
                        <list>com.mascix.swaggerific.MainController</list>
                        <list>com.mascix.swaggerific.splashscreen.Preloader</list>
                        <list>com.mascix.swaggerific.splashscreen.AppNotification</list>
                        <list>com.mascix.swaggerific.Loader</list>
                        <list>com.mascix.swaggerific.SwaggerModal</list>
                        <list>io.swagger.v3.oas.models.Operation</list>
                        <list>io.swagger.v3.oas.models.media.Schema</list>
                        <list>io.swagger.v3.oas.models.headers.Header</list>
                        <list>io.swagger.v3.oas.models.info.Info</list>
                        <list>io.swagger.v3.oas.models.info.Contact</list>
                        <list>io.swagger.v3.oas.models.tags.Tag</list>
                        <list>io.swagger.v3.oas.models.info.License</list>
                        <list>io.swagger.v3.oas.models.PathItem</list>
                        <list>io.swagger.v3.oas.models.parameters.RequestBody</list>
                        <list>io.swagger.v3.oas.models.responses.ApiResponses</list>
                        <list>io.swagger.v3.oas.models.responses.ApiResponse</list>
                        <list>io.swagger.v3.oas.models.media.Content</list>
                        <list>io.swagger.v3.oas.models.media.MediaType</list>
                        <list>io.swagger.v3.oas.models.ExternalDocumentation</list>
                        <list>io.swagger.v3.oas.models.parameters.Parameter</list>
                        <list>io.swagger.v3.oas.models.servers.Server</list>
                        <list>io.swagger.v3.oas.models.security.SecurityRequirement</list>
                        <list>io.swagger.v3.oas.models.Paths</list>
                        <list>io.swagger.v3.oas.models.Components</list>
                        <list>javafx.scene.layout.AnchorPane</list>
                        <list>javafx.scene.control.SplitPane</list>
                        <list>javafx.scene.control.TreeView</list>
                        <list>javafx.scene.control.TabPane</list>
                        <list>javafx.scene.control.Tab</list>
                        <list>javafx.scene.control.MenuBar</list>
                        <list>javafx.scene.control.Menu</list>
                        <list>javafx.scene.control.MenuItem</list>
                        <list>javafx.scene.control.MenuButton</list>
                        <list>javafx.scene.control.ContextMenu</list>
                        <list>javafx.scene.input.KeyCodeCombination</list>
                        <list>javafx.scene.input.KeyCombination</list>
                    </reflectionList>
                    <attachList>
                        <list>display</list>
                        <list>lifecycle</list>
                        <list>position</list>
                        <list>statusbar</list>
                        <list>storage</list>
                    </attachList>
                    <mainClass>${mainClass}</mainClass>
                    <verbose>true</verbose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <argLine>
                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>